@@ -1,6 +1,8 @@
 2018-10-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
-	* dvispc.c: Clean up code, more comments.
+	* dvispc.c: Clean up code, more comments. Mostly revert
+	the change on 2018-10-06, "Change option handling for
+	future extensions".
 	* dvispc.test: Test pipe input/output.
 	* chkdvifont.man, dvispc.man: More info.
 
